# reevofs

./: Cargo.toml  Dockerfile  Dockerfile.fuse-test  Dockerfile.test
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: read_raw_bytes.rs  write_raw_bytes.rs
crates/cli/: Cargo.toml
crates/cli/src/: fs.rs  main.rs
crates/preload/: Cargo.toml  README.md
crates/preload/src/: lib.rs
docs/: integrating-reevofs-fuse.md
docs/superpowers/specs/: 2026-03-24-agentfs-fuse-layer-spec.md  2026-04-22-agentfs-binary-write-endpoint.md  2026-05-14-agentfs-native-rename-endpoint.md
src/: fs.rs  main.rs
tests/: fuse_integration_test.sh  integration_test.sh  mock_api.py
