[package]
name = "reevofs"
version = "0.1.0"
edition = "2024"

[features]
default = []
fuse = ["dep:fuser"]

[dependencies]
fuser = { version = "0.17", optional = true }
libc = "0.2"
clap = { version = "4.6", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
