[package]
name = "reevofs"
version = "0.3.3"
edition = "2024"

[[bin]]
name = "reevofs"
path = "src/main.rs"

[features]
default = []
fuse = ["dep:fuser"]

[dependencies]
reevofs-api = { path = "../api" }
fuser = { version = "0.17", optional = true }
libc = "0.2"
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
